# textify4llm

./: README.md  pyproject.toml  requirements.txt
src/textify4llm/: main.py
