[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.scripts]
mytool = "textify4llm.src:main"

[project]
name = "textify4llm"
version = "0.0.1"
authors = [
  { name="Gushroom", email="972648237@qq.com" },
]
description = "Converts any file format into plaintext/JSON, enabling multimodality for any LLM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gushroom/textify4llm"
Issues = "https://github.com/gushroom/textify4llm/issues"